# game-of-life

./: README.md  game-of-life.cabal  stack.yaml
src/: Main.hs
