name:                game-of-life
version:             0.1.0.0
synopsis:            Conway's Game of Life
homepage:            https://github.com/qsctr/game-of-life
license:             MIT
author:              Bretton
build-type:          Simple
cabal-version:       >=1.10

executable game-of-life
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , gloss
